# Lumina

app/: pyproject.toml
app/src/: main.py
app/src/services/: auth_service.py  local_db.py
app/src/threaded/: sync_worker.py
app/src/windows/: dashboard_widget.py  login_window.py
backend/: .gitignore  pyproject.toml
backend/src/: config.py  main.py
backend/src/db/: conn.py
backend/src/models/: blink_model.py  session_model.py  user_model.py
backend/src/schemas/: general_schemas.py
backend/src/service/: auth_service.py
src/: main.py  tracker.py
web/: package-lock.json
web/src/: App.tsx
